# LitScout

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run notes.rtf
.github/workflows/: pages.yml
config/: config.example.yaml
config/.cache/ctgov/: 089465a0b0c0.json  69430435174f.json  9e63440b1565.json
docs/: index.md
docs/reports/: 2026-01-26--cns-biomarkers.md  2026-01-26--neuropsychiatry-mechanisms.md  2026-01-26--recursion-style-neurodegeneration-models-phenomapping.md  2026-01-27--cns-biomarkers.md  2026-01-27--in-vitro-models-of-neurodegeneration.md  2026-01-27--neuropsychiatry-mechanisms.md  2026-01-28--cns-biomarkers.md  2026-01-28--in-vitro-models-of-neurodegeneration.md  2026-01-28--neuropsychiatry-mechanisms.md  2026-01-29--cns-biomarkers.md  2026-01-29--in-vitro-models-of-neurodegeneration.md  2026-01-29--neuropsychiatry-mechanisms.md  2026-04-03--cns-biomarkers.md  2026-04-03--in-vitro-models-of-neurodegeneration.md  2026-04-03--neuropsychiatry-mechanisms.md  index.md
litscout/: __init__.py  __main__.py  config.py  db.py  notifier.py  rank.py  report.py  summarize.py
litscout/sources/: __init__.py  arxiv.py  biorxiv.py  collect_podcasts.py  collect_trials.py  collect_youtube.py  pubmed.py
prompts/: summary.md  trial_summary.md
scripts/: send_mail.applescript
tests/: __init__.py  test_cli.py  test_config.py  test_media.py  test_report.py  test_trials.py
